Fixed contact form spacing on first row of inputs.

--- a/styles/sass/_class-styles.scss
+++ b/styles/sass/_class-styles.scss
@@ -440,9 +440,12 @@ img.taco {
     justify-content: center;
     width: 75%;
 
-    > .flexBox {
+    .contactFormFirstRow {
         justify-content: space-between;
         width: 100%;
+            input {
+                width: 47%;
+            }
     }
 
     .contactForm h2 {
@@ -453,13 +456,9 @@ img.taco {
         background: #e7e7e7;
         border: none;
         font-family: "Lora";
-        margin: 8px 0;
+        margin: 8px 2px;
         padding: 15px;  
         resize: none;;
-    }
-
-    input:first-child {
-        margin-right: 14px;
     }
 
     fieldset, input, textarea {
