--- a/styles/style.css
+++ b/styles/style.css
@@ -953,11 +953,14 @@ img.taco {
           justify-content: center;
   width: 75%;
 }
-.contactForm > .flexBox {
+.contactForm .contactFormFirstRow {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
+}
+.contactForm .contactFormFirstRow input {
+  width: 47%;
 }
 .contactForm .contactForm h2 {
   margin-bottom: 20px;
@@ -966,12 +969,9 @@ img.taco {
   background: #e7e7e7;
   border: none;
   font-family: "Lora";
-  margin: 8px 0;
+  margin: 8px 2px;
   padding: 15px;
   resize: none;
-}
-.contactForm input:first-child {
-  margin-right: 14px;
 }
 .contactForm fieldset, .contactForm input, .contactForm textarea {
   width: 100%;
